# maintainers-ai-copilot

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  ARCH.md  DECISIONS.md  E2E_TEST_LOG.md  EVALS.md  PLAN.md  PROJECT_UNDERSTANDING.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  eval_classification_report.json  eval_rag_report.json  eval_thresholds.yaml  pyproject.toml  requirements-dev.txt  task.txt
.claude/: settings.json  settings.local.json
.claude/skills/speckit-git-commit/: SKILL.md
.claude/skills/speckit-git-feature/: SKILL.md
.claude/skills/speckit-git-initialize/: SKILL.md
.claude/skills/speckit-git-remote/: SKILL.md
.claude/skills/speckit-git-validate/: SKILL.md
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
api/: Dockerfile  config.py  dependencies.py  main.py  requirements.txt
api/alembic/: env.py
api/app/: exceptions.py
api/app/api/routes/: admin.py  auth.py  chat.py  conversations.py  embed.py  health.py  memories.py  rag.py  widgets.py
api/app/domain/: models.py
api/app/infra/: jwt_handler.py  minio_client.py  modelserver_client.py  observability.py  openai_client.py  prompts.py  redaction.py  redis_client.py  vault.py
api/app/infra/db/: models.py  session.py
api/app/repositories/: audit_repo.py  chunk_repo.py  conversation_repo.py  memory_repo.py  message_repo.py  user_repo.py  widget_repo.py
api/app/services/: auth_service.py  chat_service.py  chunker.py  conversation_service.py  memory_service.py  rag_service.py  widget_service.py
api/app/tools/: definitions.py  executor.py
api/prompts/: hyde.md  summarize.md  system.md
chatbot/: Dockerfile  main.py  requirements.txt
db/: langfuse-db-init.sh  minio-init.sh  vault-init.sh
db/migrations/: 0001_enable_pgvector.py  0002_core_tables.py  0003_chunks_embedding_nullable.py
evals/: golden_classification.json  golden_rag.json  requirements.txt  run_classification_eval.py  run_rag_eval.py
host/: index.html
modelserver/: Dockerfile  main.py  requirements.txt
modelserver/app/: classical.py  classifier.py  ner.py  reranker.py  summarizer.py  vault.py  weights.py
notebooks/: train_classifier.ipynb
resources/: DECISIONS.md  GUIDELINES.md  PROGRESS.md  understanding.md
resources/phases/: phase-0-T.md  phase-0.md  phase-1-T.md  phase-1.md  phase-2-T.md  phase-2.md  phase-3-T.md  phase-3.md  phase-4-T.md  phase-4.md  phase-5-T.md  phase-5.md  phase-6.md  phase-7-T.md  phase-7.md
scripts/: bulk_ingest_corpus.py  download_issues.py  process_issues.py  seed_rag_corpus.py  upload_to_minio.py
tests/: conftest.py  test_phase1_boot_guard.py  test_phase1_db.py  test_phase1_redis.py  test_phase2_auth.py  test_phase2_crud.py  test_phase2_crud_routes.py  test_phase2_exceptions.py  test_phase2_redaction.py  test_phase3_chunker.py  test_phase3_rag_service.py  test_phase3_routes.py  test_phase4_chat_service.py  test_phase4_memory.py  test_phase4_routes.py  test_phase5_stream.py  test_phase5_tools.py  test_phase5_widgets.py  test_phase7_modelserver.py
widget/: Dockerfile  index.html  nginx.conf
