[project]
name = "maintainers-ai-copilot"
version = "0.1.0"
description = "Authenticated AI chatbot for open-source maintainers to triage GitHub issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = []

# Dev tools — installed via: uv add --dev <package>
[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "testcontainers>=4.5.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
# Root mypy only covers root-level config files.
# Each service (api/, chatbot/, modelserver/) and tests/ run mypy independently
# in their own CI step where service packages are installed.
exclude = [
    "api/",
    "tests/",
    "notebooks/",
    ".specify/",
    ".claude/",
    "chatbot/",
    "modelserver/",
    "widget/",
    "host/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
