[project]
name = "maintainers-ai-copilot"
version = "0.1.0"
description = "Authenticated AI chatbot for open-source maintainers to triage GitHub issues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = []

# Dev tools — installed via: uv add --dev <package>
[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "testcontainers>=4.5.0",
    "httpx>=0.27.0",
    # API packages needed to run root-level tests against api/ code
    "hvac>=2.3.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "minio>=7.2.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "langfuse>=2.40.0,<3.0.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "email-validator>=2.0",
    "bcrypt<4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
# Root mypy only covers root-level config files.
# Each service (api/, chatbot/, modelserver/) and tests/ run mypy independently
# in their own CI step where service packages are installed.
exclude = [
    "api/",
    "tests/",
    "notebooks/",
    ".specify/",
    ".claude/",
    "chatbot/",
    "modelserver/",
    "widget/",
    "host/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["api"]
